--- a/index.html
+++ b/index.html
@@ -3,19 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <title>Main Page</title>
+    <style>
+              header {
+        border-bottom: 1px solid rgb(191, 137, 253);
+        padding: 8px 0 8px 0;
+      }
+
+      section {
+        display: inline-block;
+        width: 150px;
+        padding: 0 8px 0 0;
+        border-right: 1px solid rgb(191, 137, 253);
+        margin-bottom: 8px;
+      }
+
+      aside {
+        display: inline-block;
+        width: 900px;
+        vertical-align: top;
+        padding: 0 0 0 8px;
+      }
+      h1 {
+        font-family: arial, sans-serif}
+        h1 {
+          color: #32005c;
+        }
+      p {font-family: arial, sans-serif;
+
+      }
+      p {color: black;
+
+      }
+      div {
+  color: rgb(124, 62, 143);
+  font-family: Arial, sans-serif
+}
+    </style>
 </head>
 <body>
-    <ul>
-    <li><a href="index.html">Main Page</a></li>
-    <li><a href="early-life-and-education/index.html">Early Life and Education</a></li>
-    <li><a href="literary-work/index.html">Literary Work</a></li>
-    <li><a href="pupin-coils/index.html">Pupin Coils</a></li>
-    </ul>
-    <h1>Mihajlo Idvorski Pupin</h1>
-    <img src="pupin.jpg" alt="Mihajlo Idvorski Pupin">
+  <div id="header">
+  <header><h1>Mihajlo Idvorski Pupin</h1></header></div>
+    <section>
+      <div id="nav">
+      <ul>
+        <li><a href="index.html">Main Page</a></li>
+        <li><a href="early-life-and-education/index.html">Early Life and Education</a></li>
+        <li><a href="literary-work/index.html">Literary Work</a></li>
+        <li><a href="pupin-coils/index.html">Pupin Coils</a></li>
+        </ul></div>
+</section><aside> 
+  <div style="text-align: center;">
+  <img src="pupin.jpg" alt="Mihajlo Idvorski Pupin"></div>
 <p><b>Mihajlo Idvorski Pupin, Ph.D., LL.D. (Serbian Cyrillic: Михајло Идворски Пупин; 9 October 1858 – 12 March 1935)</b>, also known as Michael I. Pupin, was a Serbian American physicist and physical chemist.</p>
 <p>Pupin is best known for his numerous patents, including a means of greatly extending the range of long-distance telephone communication by placing loading coils (of wire) at predetermined intervals along the transmitting wire (known as "pupinization"). </p>
 <p>Pupin was a founding member of National Advisory Committee for Aeronautics (NACA) on March 3, 1915, which later became NASA.</p>
-
+   </aside>
 </body>
 </html>
