--- a/literary-work/index.html
+++ b/literary-work/index.html
@@ -3,25 +3,145 @@
 <head>
     <meta charset="UTF-8">
     <title>Literary Work</title>
+    <style>
+      h1 {
+        font-family: arial, sans-serif}
+        h1 {
+          color: #32005c;
+        }
+      p {font-family: arial, sans-serif;
+
+      }
+      p {color: black;
+
+      }
+
+         table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 80%;
+        margin: 0 auto;
+      }
+
+      #heading {
+        background-color: rgb(99, 35, 202);
+        color: white;
+      }
+
+      th {
+        padding: 18px;
+      }
+
+      td {
+        padding: 12px;
+      }
+
+      th,
+      td {
+        border: solid 1px #ffffff;
+      }
+
+      tr {
+        background-color: #eda3ff;
+      }
+      header {
+        border-bottom: 1px solid rgb(191, 137, 253);
+        padding: 8px 0 8px 0;
+      }
+
+      section {
+        display: inline-block;
+        width: 150px;
+        padding: 0 8px 0 0;
+        border-right: 1px solid rgb(191, 137, 253);
+        margin-bottom: 8px;
+      }
+
+      aside {
+        display: inline-block;
+        width: 900px;
+        vertical-align: top;
+        padding: 0 0 0 8px;
+      }
+      div {
+  color: rgb(124, 62, 143);
+  font-family: Arial, sans-serif;
+}
+     </style>
+      
 </head>
 <body>
-    <ul>
+  <div id="header">
+    <header><h1>Literary Work</h1></header></div>
+    <section>
+      <div id="nav" >
+      <ul>
         <li><a href="../index.html">Main Page</a></li>
         <li><a href="../early-life-and-education/index.html">Early Life and Education</a></li>
         <li><a href="index.html">Literary Work</a></li>
         <li><a href="../pupin-coils/index.html">Pupin Coils</a></li>
-        </ul>
-    <h1>Literary Work</h1>
-    <p>Besides his patents he published several dozen scientific disputes, articles, reviews and a 396-page autobiography under the name Michael Pupin, From Immigrant to Inventor (Scribner's, 1923). He won the annual Pulitzer Prize for Biography or Autobiography. It was published in Serbian in 1929 under the title From pastures to scientist (Od pašnjaka do naučenjaka). </p>
+        </ul></div>
+    </section><aside>
+      <p>Besides his patents he published several dozen scientific disputes, articles, reviews and a 396-page autobiography under the name Michael Pupin, From Immigrant to Inventor (Scribner's, 1923). He won the annual Pulitzer Prize for Biography or Autobiography. It was published in Serbian in 1929 under the title From pastures to scientist (Od pašnjaka do naučenjaka). </p>
     <p><b>Beside this he also published:</b></p>
-    <ul>
-        <li>Pupin Michael: <i Osmotische Druch und seine Beziehung zur Freien Energie, Inaugural Dissertation zur Erlangung der Doctorwurde, Buchdruckerei von Gustav Shade, Berlin, June, 1889.></i></li>
-        <li>Pupin Michael: <i>Thermodynamics of Reversible Cycles in Gases and Saturated Vapors, John Wiley & Sons. 1894.</i></li>
-        <li>Pupin Michael: <i>Serbian Orthodox Church, J. Murray. London, 1918.</i></li>
-        <li>Pupin Michael: <i>Yugoslavia. (In Association for International Conciliation Amer. Branch —Yugoslavia). American Association for International Conciliation. 1919.</i></li>
-        <li>Pupin Michael: <i>The New Reformation; from Physical to Spiritual Realities, Scribner, New York, 1927.</i></li>
-        <li>Pupin Michael: <i>Romance of the Machine, Scribner, New York, 1930.</i></li>
-        <li>Pupin Michael: <i>Discussion by M. Pupin and other prominent engineers in “Toward Civilization, edited by C. A. Beard. Longmans, Green& Co. New York, 1930.</i></li>
-    </ul>
-</body>
+        <table>
+            <tr id="heading" >
+                <td>Author Name</td>
+                <td>Work Name</td>
+                <td>Publisher</td>
+                <td>Place</td>
+                <td>Year of Publishing</td>
+            </tr>
+<tr class="even">
+    <td>Pupin Michael</td>
+    <td>Der Osmotische Druch und seine Beziehung zur Freien Energie <br>Inaugural Dissertation zur Erlangung der Doctorwurde</td>
+    <td>Buchdruckerei von Gustav Shade</td>
+    <td>Berlin</td>
+    <td>June, 1889</td>
+</tr>
+<tr class="even">
+    <td>Pupin Michael</td>
+    <td>Thermodynamics of Reversible Cycles in Gases and Saturated Vapors</td>
+    <td>John Wiley & Sons</td>
+    <td>/</td>
+    <td>1894</td>
+</tr>
+<tr class="even">
+<td>Pupin Michael</td>
+<td>Serbian Orthodox Church</td>
+<td>J. Murray.</td>
+<td>London</td>
+<td>1918</td>
+</tr>
+<tr class="even">
+    <td>Pupin Michael</td>
+    <td>Yugoslavia. (In Association for International Conciliation Amer. Branch —Yugoslavia)</td>
+    <td>American Association for International Conciliation</td>
+    <td>/</td>
+    <td>1919</td>
+</tr>
+<tr class="even">
+    <td>Pupin Michael</td>
+    <td>he New Reformation; from Physical to Spiritual Realities</td>
+    <td>Scribner</td>
+    <td>New York</td>
+    <td>1927</td>
+</tr>
+<tr class="even">
+    <td>Pupin Michael</td>
+    <td>Romance of the Machine</td>
+    <td>Scribner</td>
+    <td>New York</td>
+    <td>1930</td>
+</tr>
+<tr class="even">
+    <td>Pupin Michael</td>
+    <td>Discussion by M. Pupin and other prominent engineers in “Toward Civilization</td>
+    <td>edited by C. A. Beard. Longmans, Green& Co</td>
+    <td>New York</td>
+    <td>1930</td>
+</tr>
+</table>
+</aside>
+    </body>
 </html>
