--- a/pupin-coils/index.html
+++ b/pupin-coils/index.html
@@ -3,16 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <title>Pupin Coils</title>
+    <style>
+        header {
+  border-bottom: 1px solid rgb(191, 137, 253);
+  padding: 8px 0 8px 0;
+}
+
+section {
+  display: inline-block;
+  width: 150px;
+  padding: 0 8px 0 0;
+  border-right: 1px solid rgb(191, 137, 253);
+  margin-bottom: 8px;
+}
+
+aside {
+  display: inline-block;
+  width: 900px;
+  vertical-align: top;
+  padding: 0 0 0 8px;
+}
+h1 {
+  font-family: arial, sans-serif}
+  h1 {
+    color: #32005c
+  }
+p {font-family: arial, sans-serif
+
+}
+p {color: black;
+
+}
+div {
+  color: rgb(124, 62, 143);
+  font-family: Arial, sans-serif;
+}
+</style>
 </head>
 <body>
-    <ul>
+  <div id="header">
+  <header><h1>Pupin Coils</h1></header></div>
+    <section>
+      <div id="nav">
+      <ul>
         <li><a href="../index.html">Main Page</a></li>
         <li><a href="../early-life-and-education/index.html">Early Life and Education</a></li>
         <li><a href="../literary-work/index.html">Literary Work</a></li>
         <li><a href="index.html">Pupin Coils</a></li>
-        </ul>
-    <h1>Pupin Coils</h1>
-    <img src="pupin-1916.jpg" alt="Pupin">
+        </ul></div>
+    </section><aside>
+      <div style="text-align: center;">
+    <img src="pupin-1916.jpg" alt="Pupin"></div>
     <p>Pupin's 1899 patent for loading coils, archaically called "Pupin coils", followed closely on the pioneering work of the English physicist and mathematician Oliver Heaviside, which predates Pupin's patent by some seven years. The importance of the patent was made clear when the American rights to it were acquired by American Telephone & Telegraph (AT&T), making him wealthy. Although AT&T bought Pupin's patent, they made little use of it, as they already had their own development in hand led by George Campbell and had up to this point been challenging Pupin with Campbell's own patent. AT&T were afraid they would lose control of an invention which was immensely valuable due to its ability to greatly extend the range of long distance telephones and especially submarine ones.</p>
+    </aside>
 </body>
 </html>
