--- a/index.html
+++ b/index.html
@@ -4,19 +4,17 @@
     <meta charset="UTF-8">
     <title>Main Page</title>
     <style>
-              header {
+      header {
         border-bottom: 1px solid rgb(191, 137, 253);
         padding: 8px 0 8px 0;
       }
-
-      section {
+     section {
         display: inline-block;
         width: 150px;
         padding: 0 8px 0 0;
         border-right: 1px solid rgb(191, 137, 253);
         margin-bottom: 8px;
       }
-
       aside {
         display: inline-block;
         width: 900px;
@@ -24,20 +22,16 @@
         padding: 0 0 0 8px;
       }
       h1 {
-        font-family: arial, sans-serif}
-        h1 {
-          color: #32005c;
+        font-family: arial, sans-serif;
+        color: #32005c
         }
       p {font-family: arial, sans-serif;
-
-      }
-      p {color: black;
-
-      }
-      div {
+        color: black
+        }
+     div {
   color: rgb(124, 62, 143);
   font-family: Arial, sans-serif
-}
+       }
     </style>
 </head>
 <body>
