--- a/pupin-coils/index.html
+++ b/pupin-coils/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <title>Pupin Coils</title>
     <style>
-        header {
+header {
   border-bottom: 1px solid rgb(191, 137, 253);
   padding: 8px 0 8px 0;
 }
-
 section {
   display: inline-block;
   width: 150px;
@@ -16,7 +15,6 @@ section {
   border-right: 1px solid rgb(191, 137, 253);
   margin-bottom: 8px;
 }
-
 aside {
   display: inline-block;
   width: 900px;
@@ -24,15 +22,11 @@ aside {
   padding: 0 0 0 8px;
 }
 h1 {
-  font-family: arial, sans-serif}
-  h1 {
-    color: #32005c
+  font-family: arial, sans-serif;
+  color: #32005c
   }
-p {font-family: arial, sans-serif
-
-}
-p {color: black;
-
+p {font-family: arial, sans-serif;
+   color: black
 }
 div {
   color: rgb(124, 62, 143);
