--- a/literary-work/index.html
+++ b/literary-work/index.html
@@ -5,42 +5,29 @@
     <title>Literary Work</title>
     <style>
       h1 {
-        font-family: arial, sans-serif}
-        h1 {
-          color: #32005c;
+        font-family: arial, sans-serif;
+        color: #32005c
         }
       p {font-family: arial, sans-serif;
-
-      }
-      p {color: black;
-
-      }
-
-         table {
+      color: black
+        }
+      table {
         font-family: arial, sans-serif;
         border-collapse: collapse;
         width: 80%;
         margin: 0 auto;
       }
-
       #heading {
         background-color: rgb(99, 35, 202);
         color: white;
       }
-
       th {
         padding: 18px;
       }
-
       td {
         padding: 12px;
-      }
-
-      th,
-      td {
         border: solid 1px #ffffff;
       }
-
       tr {
         background-color: #eda3ff;
       }
@@ -48,7 +35,6 @@
         border-bottom: 1px solid rgb(191, 137, 253);
         padding: 8px 0 8px 0;
       }
-
       section {
         display: inline-block;
         width: 150px;
@@ -56,7 +42,6 @@
         border-right: 1px solid rgb(191, 137, 253);
         margin-bottom: 8px;
       }
-
       aside {
         display: inline-block;
         width: 900px;
